--- a/package.json
+++ b/package.json
@@ -9,13 +9,33 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/dela-gothic-one": "^0.2.3",
+    "@expo/vector-icons": "^13.0.0",
+    "@expo/webpack-config": "^19.0.0",
+    "@react-navigation/bottom-tabs": "^6.5.8",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
     "expo": "~49.0.11",
+    "expo-app-loading": "^2.1.1",
+    "expo-font": "~11.4.0",
+    "expo-linear-gradient": "~12.3.0",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.4"
+    "react-native": "0.72.4",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-maps": "^1.7.1",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-web": "~0.19.6",
+    "styled-components": "^6.0.8",
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@babel/plugin-syntax-decorators": "^7.22.10",
+    "@react-native-community/eslint-config": "^3.2.0",
+    "babel-plugin-root-import": "^6.6.0"
   },
   "private": true
 }
